--- a/app.json
+++ b/app.json
@@ -1,30 +1,44 @@
 {
   "expo": {
     "name": "MedResus",
-    "slug": "MedResus",
+    "slug": "medresus",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "icon": "./assets/medresus-icon.png",
+    "scheme": "medresus",
+    "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0b0b0e"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "in.apollosage.medresus"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/medresus-icon.png",
+        "backgroundColor": "#0b0b0e"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "in.apollosage.medresus",
+      "versionCode": 1,
+      "permissions": [
+        "INTERNET",
+        "VIBRATE"
+      ]
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "extra": {
+      "eas": {
+        "projectId": "05bc1d8d-0e3b-4f51-9224-d82b3bbff253"
+      }
+    },
+    "plugins": [
+      "expo-secure-store",
+      "expo-mail-composer"
+    ]
   }
 }
