--- a/package.json
+++ b/package.json
@@ -2,21 +2,43 @@
   "name": "medresus",
   "version": "1.0.0",
   "main": "index.ts",
+  "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/stack": "^7.6.2",
+    "expo": "~54.0.22",
+    "expo-clipboard": "^8.0.7",
+    "expo-file-system": "~19.0.17",
+    "expo-haptics": "~15.0.7",
+    "expo-in-app-purchases": "^14.5.0",
+    "expo-mail-composer": "~15.0.7",
+    "expo-secure-store": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "@types/react": "~19.1.0",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.0",
+    "typescript": "~5.9.2"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~54.0.22",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "private": true
 }
